--- a/src/sunlinsol_lapackdense/CMakeLists.txt
+++ b/src/sunlinsol_lapackdense/CMakeLists.txt
@@ -35,9 +35,6 @@ SET(sunlinsollapackdense_HEADERS
   ${sundials_SOURCE_DIR}/include/sunlinsol/sunlinsol_lapackdense.h
   )
 
-# Add source directory to include directories
-INCLUDE_DIRECTORIES(.)
-
 # Define C preprocessor flag -DBUILD_SUNDIALS_LIBRARY 
 ADD_DEFINITIONS(-DBUILD_SUNDIALS_LIBRARY)
 
@@ -49,6 +46,11 @@ IF(BUILD_STATIC_LIBS)
   ADD_LIBRARY(sundials_sunlinsollapackdense_static STATIC ${sunlinsollapackdense_SOURCES} ${shared_SOURCES})
   SET_TARGET_PROPERTIES(sundials_sunlinsollapackdense_static
     PROPERTIES OUTPUT_NAME sundials_sunlinsollapackdense CLEAN_DIRECT_OUTPUT 1)
+  target_include_directories(sundials_sunlinsollapackdense_static
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include/sunlinsol> 
+  )
   INSTALL(TARGETS sundials_sunlinsollapackdense_static DESTINATION lib)
 ENDIF(BUILD_STATIC_LIBS)
 
@@ -59,6 +61,11 @@ ENDIF(BUILD_STATIC_LIBS)
 #  - Install the SUNLINSOLLAPACKDENSE library
 IF(BUILD_SHARED_LIBS)
   ADD_LIBRARY(sundials_sunlinsollapackdense_shared SHARED ${sunlinsollapackdense_SOURCES} ${shared_SOURCES})
+  target_include_directories(sundials_sunlinsollapackdense_shared
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include/sunlinsol> 
+  )
 
   # sunlinsollapackdense depends on sunmatrixdense and LAPACK
   TARGET_LINK_LIBRARIES(sundials_sunlinsollapackdense_shared
