--- a/src/sunlinsol_lapackband/CMakeLists.txt
+++ b/src/sunlinsol_lapackband/CMakeLists.txt
@@ -45,13 +45,14 @@ ADD_DEFINITIONS(-DBUILD_SUNDIALS_LIBRARY)
 #  - Set the library name and make sure it is not deleted
 #  - Install the SUNLINSOLLAPACKBAND library
 IF(BUILD_STATIC_LIBS)
-  ADD_LIBRARY(sundials_sunlinsollapackband_static STATIC ${sunlinsollapackband_SOURCES} ${shared_SOURCES})
+  ADD_LIBRARY(sundials_sunlinsollapackband_static STATIC ${sunlinsollapackband_HEADERS} ${sunlinsollapackband_SOURCES} ${shared_SOURCES})
   SET_TARGET_PROPERTIES(sundials_sunlinsollapackband_static
     PROPERTIES OUTPUT_NAME sundials_sunlinsollapackband CLEAN_DIRECT_OUTPUT 1)
   target_include_directories(sundials_sunlinsollapackband_static
     PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<INSTALL_INTERFACE:lib> 
+    $<BUILD_INTERFACE:${sundials_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include> 
   )
   INSTALL(TARGETS sundials_sunlinsollapackband_static DESTINATION lib)
 ENDIF(BUILD_STATIC_LIBS)
@@ -62,7 +63,7 @@ ENDIF(BUILD_STATIC_LIBS)
 #  - Set VERSION and SOVERSION for shared libraries
 #  - Install the SUNLINSOLLAPACKBAND library
 IF(BUILD_SHARED_LIBS)
-  ADD_LIBRARY(sundials_sunlinsollapackband_shared SHARED ${sunlinsollapackband_SOURCES} ${shared_SOURCES})
+  ADD_LIBRARY(sundials_sunlinsollapackband_shared SHARED ${sunlinsollapackband_HEADERS} ${sunlinsollapackband_SOURCES} ${shared_SOURCES})
 
   # sunlinsollapackband depends on sunmatrixband and LAPACK
   TARGET_LINK_LIBRARIES(sundials_sunlinsollapackband_shared
@@ -74,7 +75,8 @@ IF(BUILD_SHARED_LIBS)
   target_include_directories(sundials_sunlinsollapackband_shared
     PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-    $<INSTALL_INTERFACE:lib> 
+    $<BUILD_INTERFACE:${sundials_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include> 
   )
   SET_TARGET_PROPERTIES(sundials_sunlinsollapackband_shared
     PROPERTIES VERSION ${sunlinsollib_VERSION} SOVERSION ${sunlinsollib_SOVERSION})
