implemented sunlinsol_umfpack

--- a/examples/sunlinsol/CMakeLists.txt
+++ b/examples/sunlinsol/CMakeLists.txt
@@ -26,6 +26,10 @@ if(PARDISO_ENABLE AND PARDISO_FOUND)
   add_subdirectory(pardiso)
 endif(PARDISO_ENABLE AND PARDISO_FOUND)
 
+if(UMFPACK_ENABLE AND UMFPACK_FOUND)
+  add_subdirectory(umfpack)
+endif(UMFPACK_ENABLE AND UMFPACK_FOUND)
+
 if(SUPERLUMT_ENABLE AND SUPERLUMT_FOUND)
   add_subdirectory(superlumt)
 endif(SUPERLUMT_ENABLE AND SUPERLUMT_FOUND)
